2007-10-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (check_signature): do signature version check
   here
   (finish_header): report invalid signature details to the signature
   object
   (signatures): return all parsed signatures, not just "valid" signatures
 * lib/Mail/DKIM/Signature.pm: some misc. cleanup
   (check_version): version check is now a separate method, rather than
   being part of parse()
 * lib/Mail/DKIM/DkSignature.pm (check_version): always true
 * t/corpus/multiple_2.txt: a message testing multiple signatures with
   different results
 * t/verifier.t: verify that each signature's results are available and
   correct

2007-10-24: Jason Long <jlong@messiah.edu>
 * t/corpus/ignore_7.txt: a message with an expired signature
 * lib/Mail/DKIM/Signature.pm: recognize Expiration as a parameter
 * scripts/dkimsign.pl: make it possible to create a signature with an
   x= tag
 * t/verifier.t: test ignore_7.txt message, should "ignore"
 * lib/Mail/DKIM/Verifier.pm: check signature expiration when verifying
 * lib/Mail/DKIM/Signature.pm (check_expiration): new method

2007-10-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: use "Key" property instead of "private" to
   store the private key; new methods key() and key_file(); allow each
   signature to have its own private key
 * t/signer_policy.t: test specifying a key file in a policy

2007-10-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/MessageParser.pm: return nonzero for PRINT and CLOSE
 * lib/Mail/DKIM/DkSignature.pm: make expiration() for DomainKey-Signature
   behave more compatibly with expiration() for DKIM-Signature
 * lib/Mail/DKIM/Verifier.pm: remove dependency on Error module
 * README: what I'm interested in if make test fails
 * lib/Mail/DKIM/Signer.pm: fix bug reported by dairiki, who noticed that
   the Signer class ignored the signature-specified algorithm when
   building the algorithm object
 * scripts/dkimsign.pl: update POD a bit