@@ -1,4 +1,4 @@
-DKIM-Signature: v=0.5; a=rsa-sha1; c=simple; d=messiah.edu; h=received:received:from:to:subject:date:message-id; q=dns/txt; s=testbad4; bh=rYdLRBGGXK4PCDh+3AbwGuV2OEU=; b=fTmnR2WeabrW0qAlIDm25QOI8pEVfKayiu56bNQeIg7Qbcg7SEeq9Y71MU5WK11DWUwg2+nruwq+y22VQq/Wtw+014kTkfT073wMlTBjeZqNl63T+whlwgUAIjgR6XuR+BP6bc1/nRBbVB7Wjfctj5yNUgGCZqxVEh07wBtgFg0=
+DKIM-Signature: v=0.5; a=rsa-sha1; c=simple; d=messiah.edu; h=received:received:from:to:subject:date:message-id; q=dns/txt; s=testbad7; bh=rYdLRBGGXK4PCDh+3AbwGuV2OEU=; b=fTmnR2WeabrW0qAlIDm25QOI8pEVfKayiu56bNQeIg7Qbcg7SEeq9Y71MU5WK11DWUwg2+nruwq+y22VQq/Wtw+014kTkfT073wMlTBjeZqNl63T+whlwgUAIjgR6XuR+BP6bc1/nRBbVB7Wjfctj5yNUgGCZqxVEh07wBtgFg0=
 Received: from x.y.test
    by example.net
    via TCP
@@ -8,7 +8,7 @@ Received: from x.y.test
 Received: from machine.example by x.y.test; 21 Nov 1997 10:01:22 -0600
 From: Jason Long <jlong@messiah.edu>
 To: Nobody <nobody@messiah.edu>
-Subject: dkim test (badkey_6)
+Subject: dkim test (badkey_7)
 Date: Wed, 7 Dec 2005 09:11:00 -0500
 Message-ID: <20051207091100@test.messiah.edu>
 
