@@ -1,0 +1,20 @@
+DKIM-Signature: v=1; a=rsa-sha1; c=simple; d=messiah.edu; h=from:to:subject:date; q=dns/txt; s=test1; bh=N9OQp3Fydw5h5SJ1UDyZrgBPEDU=; b=ZiYNuPr43CrzT9wUwgAapNx0NUVrBAV3nXj8AlOTkCh3OqVaR13LVxlUKA9hbznugXETCKSENDr4hGBPvuMwcA==
+Received: from x.y.test
+   by example.net
+   via TCP
+   with ESMTP
+   id ABC12345
+   for <mary@example.net>;  21 Nov 1997 10:05:43 -0600
+Received: from machine.example by x.y.test; 21 Nov 1997 10:01:22 -0600
+From: Jason Long <jlong@messiah.edu>
+To: Nobody <nobody@messiah.edu>
+Subject: dkim test (goodkey_1)
+Date: Wed, 7 Dec 2005 09:11:00 -0500
+
+This is a test
+  More lines here
+
+Blah  blah  blah
+
+
+
