@@ -1,0 +1,20 @@
+DKIM-Signature: v=1; a=rsa-sha1; c=simple; d=messiah.edu; h=from:to:subject:date; q=dns/txt; s=test3; i=jlong@messiah.edu; bh=N9OQp3Fydw5h5SJ1UDyZrgBPEDU=; b=RwH23zxIJNWSjpzNY3SnADAsHf4sjDqxPwcDC+uEUsnlqjeKG9cS3aX1ID+d6vVz+uuRjFKh0wxvOFeQVF4wcA==
+Received: from x.y.test
+   by example.net
+   via TCP
+   with ESMTP
+   id ABC12345
+   for <mary@example.net>;  21 Nov 1997 10:05:43 -0600
+Received: from machine.example by x.y.test; 21 Nov 1997 10:01:22 -0600
+From: Jason Long <jlong@messiah.edu>
+To: Nobody <nobody@messiah.edu>
+Subject: dkim test (goodkey_3)
+Date: Wed, 7 Dec 2005 09:11:00 -0500
+
+This is a test
+  More lines here
+
+Blah  blah  blah
+
+
+
