@@ -1,4 +1,16 @@
 2007-10-24: Jason Long <jlong@messiah.edu>
+ * t/corpus/badkey_*.txt: changed subjects to indicate which test it is
+ * t/corpus/badkey_7.txt, badkey_8.txt, goodkey_1.txt, goodkey_2.txt,
+   goodkey_3.txt: additional tests of public key features
+ * t/corpus/verifier.t: test the new test messages
+ * lib/Mail/DKIM/Verifier.pm (check_public_key): check key granularity
+   and report the problem if it doesn't match
+ * lib/Mail/DKIM/PublicKey.pm (check_granularity): a method for testing
+   the granularity
+   (granularity): return the default value of '*' if g= not defined
+ * scripts/dkimsign.pl: ability to set i= tag from command-line
+
+2007-10-24: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Verifier.pm (check_signature): do signature version check
    here
    (finish_header): report invalid signature details to the signature
